ags (2.2.37)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed more unitialized values

ags (2.2.36)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved iterating buffer in ags_audio_buffer_util.c
	* work-around for broken lock-free audio buffer, reverted see below
	* reverted ags_devout.c to 2.2.25
	* reverted ags_play_audio_signal.c to 2.2.25

ags (2.2.35)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* replaced regular expression by while loop in ags_turtle_read_pn_chars_base()

ags (2.2.34)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored scheduling tasks to be done by AgsXorgApplicationContext
	* improved AgsAnimationWindow draw only as needed
	* improved AgsSoundcardEditor set sensitive
	* improved ref-count of AgsReturnableThread
	* improved resetting AgsReturnableThread

ags (2.2.33)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsAnimationWindow
	* fixed memory-leaks in ags_turtle.c
	* fixed memory-leaks in ags_lv2_turtle_parser.c
	* fixed memory-leaks in ags_simple_file.c

ags (2.2.32)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed uninitialized values for FreeBSD

ags (2.2.31)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed uninitialized values

ags (2.2.30)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsMainLoop ::sync-counter-inc() and ::sync-counter-dec() no return type

ags (2.2.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsThreadPool make AgsReturnableThread returning
	* minor improvements added -Werror=return-type

ags (2.2.28)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_audio_buffer_util_peak_*() to handle 0.0 correct
	* fixed dead-lock AgsPulseDevout provide for each buffer sub-block lock
	* fixed dead-lock AgsCoreAudioDevout provide for each buffer sub-block lock