@@ -1,3 +1,9 @@
+ags (2.2.38)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved iterating buffer in ags_audio_buffer_util.c
+	* fixed unitialized values of FreeBSD
+
 ags (2.2.37)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
